interface updates. added controls for hemi visibility, surface specularity, and camera projection mode. fixed zooming in orthographic projection. removed zoom lock controls for now, as they are nonfunctional.

--- a/cortex/webgl/resources/css/mriview.css
+++ b/cortex/webgl/resources/css/mriview.css
@@ -222,6 +222,14 @@ p#zlocklabel {
     margin-right:5px;
 }
 
+#projopts {
+    float:left;
+}
+p#projlabel {
+    float:left;
+    margin-right:5px;
+}
+
 /* datasets */
 ul#datasets { 
     width: 200px; 
